# lightgbm-rs

./: Cargo.toml  LICENSE  README.md
examples/binary_classification/: Cargo.toml
examples/multiclass_classification/: Cargo.toml
examples/regression/: Cargo.toml
lightgbm-sys/: Cargo.toml  README.md  build.rs
lightgbm-sys/src/: bindings.rs  lib.rs
src/: booster.rs  dataset.rs
