[package]
name = "lightgbm"
version = "0.1.0"
authors = ["magicalne <magicalne@gmail.com>"]
license = "MIT"
repository = "https://github.com/magicalne/LightGBM"
description = "Machine learning using LightGBM"
readme = "README.md"
exclude = [".gitignore", ".gitmodules", "examples", "lightgbm-sys"]

[dependencies]
lightgbm-sys = { path = "lightgbm-sys", version = "0.1.0" }
libc = "0.2.81"
derive_builder = "0.12"
serde_json = "1"
polars = {version = "0.38", optional = true }


[features]
default = []
dataframe = ["polars"]
